tests/rascal/negative/type_errors/L1/18_expression_ES10_D4_57.ob
MODULE Test18;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               z := ((- ((z DIV 1) - (y - 0))) * (- (+ (0 MOD 1))));
               r := ((((z DIV 0) # (2 MOD z)) & ((1223 + 1223) = (- y))) & (((- 1) - (- 200)) > ((+ x) - (- z))));
               z := ((((2 DIV 2) MOD (z * 0)) MOD ((+ 200) DIV (- z))) MOD (((200 * 1223) - (0 MOD 200)) MOD (- (z DIV x))));
               p := ((((200 * 200) + (x - z)) - (- (y MOD y))) >= (((1223 * x) + (2 * 0)) * ((2 DIV 1) - (200 * y))));
               z := ((+ ((- 1223) * (z - x))) DIV (((0 - x) DIV (1223 DIV 1223)) DIV ((1223 MOD y) * (y * x))));
               p := ((((1 DIV 1) + (1223 * z)) + (- (2 * 1223))) = (+ ((- 0) * (y MOD x))));
               y := (+ (((- x) + (0 DIV 1223)) * ((- y) + (1 + y))));
  (* error *)  x := ((+ (+ (p DIV z))) * (+ (+ (1223 DIV 200))));
               x := ((+ ((x * 2) MOD (1223 + 0))) DIV (((+ x) - (1 + z)) MOD ((200 + 1223) - (x * 1))));
               x := (((- (+ 200)) MOD ((+ z) + (y MOD x))) - (((1223 * 1) * (+ 200)) DIV (+ (0 - y))))
END Test18.